test/expected/config-error.out
/* begin "data/error.cdeclrc" */
cdecl> typedef int
                  ^
data/error.cdeclrc:1,12: syntax error: unexpected end of command
